--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(dsaa-c2e C)
 set(CMAKE_C_STANDARD 99)
 
 add_executable(list testlist.c list.c list.h fatal.h)
+add_executable(stack_array teststka.c stackar.c stackar.h)
