--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,6 @@ project(dsaa-c2e C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(list testlist.c list.c list.h fatal.h)
-add_executable(stack_array teststka.c stackar.c stackar.h)
+add_executable(testlist testlist.c list.c list.h fatal.h)
+add_executable(teststka teststka.c stackar.c stackar.h)
+add_executable(teststkl teststkl.c stackli.c stackli.h)
