--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_C_STANDARD 99)
 add_executable(testlist testlist.c list.c list.h fatal.h)
 add_executable(teststka teststka.c stackar.c stackar.h)
 add_executable(teststkl teststkl.c stackli.c stackli.h)
+add_executable(testque testque.c queue.c queue.h)
